# avocado

./: .gitignore  Cargo.toml  README.md  build.rs  log4rs.yaml
avocado_common/: Cargo.toml
avocado_common/src/: lib.rs
avocado_macro/: Cargo.toml
avocado_macro/src/: lib.rs
config/: config.example.toml  config.toml
plugins/js/: index.js  package.json
plugins/js/def/: constants.ts  tsconfig.json  type.ts
plugins/js/example/: time.js
src/: main.rs
src/bot/: bot.rs  core.rs  friend.rs  group.rs  message.rs  mod.rs
src/kritor/: api.rs  impl.rs  mod.rs  server.rs
src/model/: config.rs  error.rs  mod.rs  store.rs
src/service/: loader.rs  mod.rs  register.rs  service.rs  status.rs
src/service/plugins/: mod.rs
src/service/plugins/default/: mod.rs  repeat.rs  status.rs
src/test/: mod.rs  test_boa.js  test_boa.rs  test_image.rs  test_time.rs
src/utils/: common.rs  image.rs  kritor.rs  mod.rs  time.rs
