
[package]
name = "avocado"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "avocado"
path = "src/main.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio-stream = "0.1.15"
h2 = "0.3.26"
once_cell = "1.19.0"
futures = "0.3.30"
rand = "0.8.5"
bytes = "1.6.0"
async-trait = "0.1.79"
ctor = "0.2.7"
dashmap = "5.5.3"

[build-dependencies]
tonic-build = "0.11"
