workspace = { members = [ "avocado_common", "avocado_macro"] }

[package]
name = "avocado"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "avocado"
path = "src/main.rs"

[dependencies]
toml = "0.8.12"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio-stream = "0.1.15"
h2 = "0.3.26"
once_cell = "1.19.0"
futures = "0.3.30"
rand = "0.8.5"
bytes = "1.6.0"
async-trait = "0.1.79"
ctor = "0.2.7"
dashmap = "5.5.3"
regex = "1.10.4"
imageproc = "0.24.0"
ab_glyph = "0.2.24"
reqwest = "0.12.3"
rusttype = "0.9.3"
lazy_static = "1.4.0"
emojis = "0.6.1"
avocado_common = { path = "./avocado_common" }
avocado_macro = { path = "./avocado_macro" }
base64 = "0.22.0"
image = "0.25.1"
zip = "0.6.6"
unicode-segmentation = "1.7.1"
sysinfo = "0.30.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
boa_engine = { version = "0.18.0", features = ["intl", "intl_bundled"] }
boa_runtime = { version = "0.18.0" }
boa_gc = { version = "0.18.0" }
winapi = { version = "0.3.9", optional = true, features = ["psapi", "processthreadsapi", "winnt"] }
sysconf = { version = "0.3.4", optional = true }
chrono = "0.4.37"
notify = "6.1.1"
console-subscriber = "0.2.0"

[build-dependencies]
tonic-build = "0.11"

[features]
default = ["winapi"]
linux = ["sysconf"]
windows = ["winapi"]