[package]
name = "avocado_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.58" , features = ["full"]}
avocado_common = { path = "../avocado_common" }
proc-macro2 = "1.0.79"
ctor = "0.2.7"

[lib]
proc-macro = true
